Update gem files and structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,8 @@
-/.bundle/
+*.gem
 /.yardoc
 /_yardoc/
+
 /coverage/
-/doc/
 /pkg/
-/spec/reports/
 /tmp/
-/.idea/
-/Gemfile.lock
-/ruby-technical-analysis-*.gem
+/bin/
