--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,12 @@
-name: Ruby
+name: Main
 
 on:
   push:
     branches:
-      - master
-
+      - main
   pull_request:
-
+    branches:
+      -main
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -14,14 +14,15 @@ jobs:
     strategy:
       matrix:
         ruby:
-          - '3.0.3'
+          - '3.0'
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
+        rubygems: latest
         ruby-version: ${{ matrix.ruby }}
         bundler-cache: true
-    - name: Run the default task
+    - name: Run tests
       run: bundle exec rake
