--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,6 @@
 name: Main
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      -main
+on: [pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
